Fix navbar hidden 2 on mobile

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .navbar.hidden {
-  top: -120px; 
+  top: -130px; 
 }
 
 .logo h1 {
